crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__admin__stats_daemon__json.snap
---
source: crates/engram-cli/tests/cli/snapshot/admin.rs
expression: f.run(& all)
---
$ engramdb --no-maintenance --dir [PROJECT] --format json stats --daemon
exit: 0
--- stdout ---
{
  "requests": null,
  "running": false
}
--- stderr ---
